--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,10 @@ nav {
   text-align: center;
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 /* ------------------------------------------------------------------------ */
 
 .flex-align-center {
@@ -185,6 +189,18 @@ nav {
 
 .padding-bottom-4 {
   padding-bottom: 4rem;
+}
+
+.padding-left-1 {
+  padding-left: 1rem;
+}
+
+.padding-left-2 {
+  padding-left: 2rem;
+}
+
+.padding-left-4 {
+  padding-left: 4rem;
 }
 
 /* ------------------------------------------------------------------------ */
@@ -397,4 +413,27 @@ nav {
   width: 100%;
   aspect-ratio: 16 / 9;
   height: auto;
+}
+
+/* ------------------------------------------------------------------------ */
+/* NAVBAR MOBILE NOWRAP --------------------------------------------------- */
+/* ------------------------------------------------------------------------ */
+
+.navbar-inline {
+  display: flex; /* aynı satır */
+  flex-direction: row;
+  align-items: center; /* dikey hizalama */
+  justify-content: space-between; /* logo solda, menü sağda */
+  flex-wrap: nowrap; /* asla satır kırma */
+  gap: 0.5rem; /* logo ↔ menü arası boşluk */
+}
+
+.navbar-inline ul {
+  margin: 0; /* Pico varsayımı */
+  display: flex; /* <li>-leri yatay hizala */
+}
+
+.navbar-inline img.logo {
+  height: clamp(75px, 10vw, 90px); /* mobilde makul yükseklik  */
+  width: auto;
 }
