Fixed left padding of menu items
menu, ol, ul > padding-left:0 by default by PicoCSS

--- a/css/style.css
+++ b/css/style.css
@@ -437,3 +437,8 @@ nav {
   height: clamp(75px, 10vw, 90px); /* mobilde makul yükseklik  */
   width: auto;
 }
+
+#hizmetlerimiz ul,
+#istanbul-projeleri details ul {
+  padding-left: 2rem;
+}
